# cock-heroine

./: .gitattributes  .gitignore  CMakeLists.txt  CockHeroine.pro  LICENSING.txt  README.md  abstractbeatinterval.cpp  abstractbeatinterval.h  abstractnewbeatvaluewidget.cpp  abstractnewbeatvaluewidget.h  adddialog.cpp  adddialog.h  adjustdialog.cpp  adjustdialog.h  analysisoptionsdialog.h  beatanalysis.cpp  beatanalysis.h  beatdatamodel.cpp  beatdatamodel.h  beatinterval.cpp  beatoptimisation.cpp  beatoptimisation.h  beatpattern.h  beattimestamp.cpp  beattimestamp.h  beatvalue.cpp  beatvalue.h  beatvaluewidget.cpp  beatvaluewidget.h  buttplugdeviceconfigdialog.cpp  buttplugdeviceconfigdialog.h  buttplugdeviceconfigdialog.ui~  buttplugdispatcher.cpp  buttplugdispatcher.h  buttplugfeatureparams.cpp  buttplugfeatureparams.h  config.h  customeventaction.cpp  deletedialog.cpp  deletedialog.h  (+68 more)
.github/workflows/: ci.yml
Resources/: CMakeLists.txt  CockHeroine.desktop  resources.qrc
Source/: .buttplugdeviceconfigdialog.ui.un~  abstractbeatinterval.h  abstractnewbeatvaluewidget.cpp  abstractnewbeatvaluewidget.h  adddialog.cpp  adddialog.h  adddialog.ui  adjustdialog.cpp  adjustdialog.h  adjustdialog.ui  analysisoptionsdialog.cpp  analysisoptionsdialog.h  analysisoptionsdialog.ui  beatanalysis.cpp  beatanalysis.h  beatdatamodel.cpp  beatdatamodel.h  beatinterval.h  beatoptimisation.cpp  beatoptimisation.h  beatpattern.cpp  beatpattern.h  beatvalue.h  beatvaluewidget.cpp  beatvaluewidget.h  buttplugdeviceconfigdialog.cpp  buttplugdeviceconfigdialog.h  buttplugdeviceconfigdialog.ui  buttplugdeviceconfigdialog.ui~  buttplugdispatcher.cpp  buttplugdispatcher.h  buttplugfeatureparams.cpp  buttplugfeatureparams.h  chmlhandler.cpp  chmlhandler.h  croppedvideosurface.cpp  croppedvideosurface.h  customeventaction.cpp  customeventaction.h  deletedialog.cpp  (+71 more)
Source/beatmeter/: editorgridline.cpp  editorgridline.h
Source/buttplug/: buttplugdevice.cpp  buttplugdevice.h  buttplugdevicefeature.cpp  buttplugdevicefeature.h  buttpluginterface.cpp  buttpluginterface.h
Source/playbackassociatedactions/: pregenerateestimsignalaction.cpp  pregenerateestimsignalaction.h
Source/stimsignal/: dualchannelsignalgenerator.h  estimwavfilewriter.cpp  estimwavfilewriter.h  monostimsignalsample.h  multithreadedsamplepipelineprocessor.cpp  multithreadedsamplepipelineprocessor.h  separatelnrsignalgenerator.cpp  separatelnrsignalgenerator.h  singlechannelsignalgenerator.cpp  singlechannelsignalgenerator.h  stimsignalfile.cpp  stimsignalfile.h  stimsignalgenerator.cpp  stimsignalgenerator.h  stimsignalmodifier.cpp  stimsignalmodifier.h  stimsignalsample.cpp  stimsignalsample.h  stimsignalsamplefactory.h  stimsignalsource.h  stimsignalworker.cpp  stimsignalworker.h  triphasesignalgenerator.cpp  triphasesignalgenerator.h
Source/stimsignal/modifiers/: boostfaststrokesmodifier.cpp  boostfaststrokesmodifier.h  breaksoftenermodifier.cpp  breaksoftenermodifier.h  channelbalancemodifier.cpp  fadefromcoldmodifier.cpp  phaseinvertermodifier.cpp  phaseinvertermodifier.h  phasesettermodifier.cpp  phasesettermodifier.h  progressincreasemodifier.cpp  progressincreasemodifier.h  singlechannelbeatproximitymodifier.cpp  singlechannelbeatproximitymodifier.h  triphasebeatproximitymodifier.cpp  triphasebeatproximitymodifier.h  triphasemodifier.cpp  triphasemodifier.h  waypoint.cpp  waypoint.h  waypointfollowermodifier.cpp  waypointfollowermodifier.h  waypointlist.cpp  waypointlist.h
beatmeter/: editorgridline.cpp  editorgridline.h
buttplug/: buttplugdevice.cpp  buttplugdevice.h  buttplugdevicefeature.cpp  buttplugdevicefeature.h  buttpluginterface.cpp  buttpluginterface.h
playbackassociatedactions/: pregenerateestimsignalaction.cpp  pregenerateestimsignalaction.h
stimsignal/: dualchannelsignalgenerator.cpp  dualchannelsignalgenerator.h  estimwavfilewriter.cpp  estimwavfilewriter.h  monostimsignalsample.cpp  monostimsignalsample.h  multithreadedsamplepipelineprocessor.cpp  multithreadedsamplepipelineprocessor.h  singlechannelsignalgenerator.cpp  singlechannelsignalgenerator.h  stereostimsignalsample.cpp  stereostimsignalsample.h  stimsignalfile.cpp  stimsignalfile.h  stimsignalgenerator.cpp  stimsignalgenerator.h  stimsignalmodifier.cpp  stimsignalmodifier.h  stimsignalsample.cpp  stimsignalsample.h  stimsignalsamplefactory.cpp  stimsignalsamplefactory.h  stimsignalsource.cpp  stimsignalsource.h  stimsignalworker.cpp  stimsignalworker.h  stimsignalworkpackage.cpp  stimsignalworkpackage.h  triphasesignalgenerator.cpp  triphasesignalgenerator.h
stimsignal/modifiers/: beatproximitymodifier.cpp  beatproximitymodifier.h  boostfaststrokesmodifier.cpp  boostfaststrokesmodifier.h  breaksoftenermodifier.cpp  breaksoftenermodifier.h  channelbalancemodifier.cpp  channelbalancemodifier.h  fadefromcoldmodifier.cpp  fadefromcoldmodifier.h  phaseinvertermodifier.cpp  phaseinvertermodifier.h  phasesettermodifier.cpp  phasesettermodifier.h  progressincreasemodifier.cpp  progressincreasemodifier.h  singlechannelbeatproximitymodifier.cpp  singlechannelbeatproximitymodifier.h  triphasebeatproximitymodifier.cpp  triphasebeatproximitymodifier.h  triphasemodifier.cpp  triphasemodifier.h  waypoint.cpp  waypoint.h  waypointfollowermodifier.cpp  waypointfollowermodifier.h  waypointlist.cpp  waypointlist.h
